--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.0", features = ["derive"] }
-env_logger = "0.9"
+env_logger = "0.11"
 log = "0.4"
-x11rb = { version = "0.10", features = ["xfixes"] }
+regex = "1.10"
+x11rb = { version = "0.13", features = ["xfixes"] }
